# HandyROS

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/handyros/handy_ros/: MainActivity.kt
handyros_core/: CMakeLists.txt  test.cpp
handyros_core/idl_patches/geometry_msgs/msg/: TwistWithCovariance.idl
handyros_core/include/: dds_manager.h  handyros.h  json_util.h  topic_payload.h  topic_publisher.h  topic_stats.h
handyros_core/src/: dds_manager.cpp  handyros.cpp  topic_payload.cpp  topic_publisher.cpp  topic_stats.cpp
handyros_core/tools/: patch_idl.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: theme.dart
lib/core/: viewer_plugin.dart
lib/models/: live_payload.dart  tf_frame.dart  topic.dart
lib/native/: handyros_bindings.dart
lib/screens/: app_shell.dart  home_screen.dart  sensors_screen.dart  settings_screen.dart  teleop_screen.dart  unknown_type_screen.dart  viewer_screen.dart
lib/services/: app_settings.dart  dds_topic_service.dart  fake_tf_service.dart  fake_topic_service.dart  phone_sensor_publisher.dart  yuv_to_rgb.dart
lib/viewers/: canvas_painters.dart  imu_readout.dart  live_payload_controller.dart  odom_readout.dart  raw_echo_view.dart  sim_clock.dart  terminal_view.dart  tf_tree_view.dart  viewer_hud.dart
lib/widgets/: filter_chip_bar.dart  freq_bar_chart.dart  search_bar_widget.dart  topic_card.dart  virtual_joystick.dart
test/: widget_test.dart
